<resources>
    <string name="app_name">Fährhaus</string>
    <string name="praeambel">Die Anonyme Sucht-Selbsthilfe FÄHRHAUS ist eine Gemeinschaft von Süchtigen, die miteinander ihre Kraft und Erfahrung teilen, um ein sauberes Leben ohne Drogen zu führen. Zu unseren Zusammenkünften kann jeder kommen, der ein Drogenproblem hat, egal ob Alkohol, Tabletten oder andere Rauschmittel. Die einzige Bedingung für die Zugehörigkeit ist die Anerkennung unserer Grundlagen und der Wunsch, ohne Drogen zu leben. Wir haben keine Gebühren oder Beiträge, sondern unterhalten uns selbst durch unsere eigenen Spenden. Wir fordern Neulinge und Besucher nicht zum Spenden auf, alle anderen haben das Vorrecht, dies zu tun.</string>
    <string name="logo_desc">main_logo</string>
    <string name="btn_MP_next">Weiter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="contact_info">Unsere Zusammenkünfte laufen derzeit über eine Telefonkonferenz ab. Sie findet am Mittwoch um 20:15 Uhr und am Samstag um 17:30 Uhr statt. Die Zugangsdaten fragt bitte per E-Mail oder telefonisch ab: </string>
    <string name="faehrhaus_email">faehrhaus@gmx.net</string>
    <string name="faehrhaus_phone">089 230 774 79</string>
    <string name="header1_steps">Die ersten 6 Schritte auf unserem Weg der Genesung:</string>
    <string name="header2_steps">Die zweiten 6 Schritte auf unserem Weg der Genesung:</string>
    <string name="step1">1. Wir erkannten, daß wir süchtig sind, und die Droge unser Leben beherrschte.</string>
    <string name="step2">2. Wir hatten keine Hoffnung mehr und das Ende unserer Hoffnung war das Ende unserer Verzweiflung. Wir gaben auf.</string>
    <string name="step3">3. Wir ließen uns fallen und erfuhren Einsicht. Aus unserem verwirrten Inneren entsprang Lebensmut.</string>
    <string name="step4">4. Wir spürten, nur durch bedingungslose Ehrlichkeit zu uns selbst können wir wieder zu uns selber stehen. Wir wurden unser erster Freund.</string>
    <string name="step5">5. Wir zweifelten an unseren Fähigkeiten und erkannten unsere Beschränktheit. Wir nahmen unsere Krankheit an.</string>
    <string name="step6">6. Wir sahen die Fehler und das Fehlverhalten unseres bisherigen Lebens.</string>
    <string name="step7">7. Durch Abrechnung und Aufarbeitung wurden wir fähig, unser neues Leben zu gestalten. Wir sahen das Falsche als falsch..</string>
    <string name="step8">8. Wir erfuhren, daß unsere Lebensgestaltung nicht unser Lebenszweck ist. Wir gaben uns und den Dingen ihren Platz.</string>
    <string name="step9">9. Wir konnten ohne Ziel leben und entdeckten die Welt um uns und sahen ihren Einfluß.</string>
    <string name="step10">10. Wir gaben unsere geistigen Sicherheiten auf und sahen unsere täglichen Illusionen. Dort, wo wir festhielten, ließen wir los. Wir fielen ins Leben.</string>
    <string name="step11">11. Wir zeigten Dankbarkeit für unser sauberes Leben und wurden willens, Verantwortung für uns selbst zu übernehmen.</string>
    <string name="step12">12. Wir wurden fähig zur Hilfe, ohne davon abhängig zu sein.</string>
    <string name="title_activity_affiliation">AffiliationActivity</string>
    <string name="affiliation_text">Ich bin hier, weil es letztlich kein Entkommen vor mir selbst gibt. Ich bleibe solange auf der Flucht, bis ich mich Euren Augen und Herzen zu stellen wage. Ehe ich es nicht ertrage, mein innerstes Geheimnis mit Euch zu teilen, werde ich nicht davon befreit sein. Ich werde einsam bleiben. Hier in der Gemeinschaft kann ich mir selbst begegnen, nicht als der Riese meiner Träume und auch nicht als der Zwerg meiner Ängste. Sondern als Mensch, der als Teil des Ganzen mitarbeitet.Auf diesem gemeinsamen Grund kann ich Wurzeln schlagen und wachsen. Nicht mehr allein wie im Tod, sondern lebendig als Mensch unter Menschen.</string>
    <string name="affiliation_header">Zugehörigkeitsbekenntnis</string>
    <string name="affiliation_footer">frei nach Richard Beauvais</string>
    <string name="btn_last_Page">Erste Seite</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>