<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stepPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepsActivity">

    <TextView
        android:id="@+id/hdr_steps"
        android:layout_width="327dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/header_steps"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stepsPage_step1"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="595dp"
        android:text="@string/step1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hdr_steps" />

    <TextView
        android:id="@+id/stepsPage_step2"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@+id/hdr_steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step1" />

    <TextView
        android:id="@+id/stepsPage_step3"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step2" />

    <TextView
        android:id="@+id/stepsPage_step4"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step3" />

    <TextView
        android:id="@+id/stepsPage_step5"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step5"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step4" />

    <TextView
        android:id="@+id/stepsPage_step6"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step6"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step5" />

    <TextView
        android:id="@+id/stepsPage_step8"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step8"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step7" />

    <TextView
        android:id="@+id/stepsPage_step9"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step9"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step8" />

    <TextView
        android:id="@+id/stepsPage_step10"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step10"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step9" />

    <TextView
        android:id="@+id/stepsPage_step12"
        android:layout_width="370dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="63dp"
        android:text="@string/step12"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step11" />

    <TextView
        android:id="@+id/stepsPage_step11"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step11"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step10" />

    <TextView
        android:id="@+id/stepsPage_step7"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="@string/step7"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stepsPage_step8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsPage_step6" />

</androidx.constraintlayout.widget.ConstraintLayout>